# bencode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  DecodeFileBenchmark.cpp  EncodeFileBenchmark.cpp  main.cpp
data/: mtr_rl.torrent  open_suse_15_3.torrent  sts_2.torrent
helpers/: CMakeLists.txt
helpers/include/: helpers.hpp
helpers/source/: CMakeLists.txt  helpers.cpp
include/bencode/: bencode.hpp
include/bencode/decoder/: decoder.hpp
include/bencode/details/: delimiters.hpp
include/bencode/element/: element.hpp  types.hpp
include/bencode/encoder/: encoder.hpp
include/bencode/result/: error.hpp  expected.hpp
source/: CMakeLists.txt
source/decoder/: decoder.cpp
source/encoder/: encoder.cpp
test/: CMakeLists.txt  DecodeElementsTest.cpp  DecodeFileTest.cpp  EncodeElementsTest.cpp  EncodeFileTest.cpp  main.cpp
